# fastapi-custom-template

./: alembic.ini  pyproject.toml  run.bat
alembic/: env.py
alembic/versions/: a9f3871cc2ff_initial.py
app/: config.py  exceptions.py  logger.py  main.py
app/apps/auth/: base_config.py  manager.py  models.py  utils.py
app/apps/chat/: managers.py  models.py  repository.py  schemas.py  views.py
app/db/: base.py  deps.py  exceptions.py  models.py  utils.py
app/utils/: datetime.py  repository.py  schema.py
