[tool.poetry]
name = "fastapi-custom-template"
version = "0.1.0"
description = ""
authors = ["zxvum <timvash90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pydantic = "^2.2.1"
pydantic-settings = "^2.0.3"
loguru = "^0.7.0"
termcolor = "^2.3.0"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
websockets = "^11.0.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
